Add links to create new order and set selected customer to current session

--- a/app/views/spree/manage/customers/show.html.erb
+++ b/app/views/spree/manage/customers/show.html.erb
@@ -32,3 +32,5 @@
 	<% end %>
 </section>
 <a href="<%= edit_manage_customer_url %>" class="btn-new-contact">Edit contact</a>
+
+<a href="<%= new_manage_order_url %>" class="new-order-button">Create New Order</a>
