--- a/app/views/spree/manage/orders/index.html.erb
+++ b/app/views/spree/manage/orders/index.html.erb
@@ -8,7 +8,7 @@
     <li>Select Delivery [Date dropdown]</li>
   </ul>
 </section>
-
+<a href="<%= new_manage_order_url %>" class="new-order-button">Create New Order</a>
 <table class="orders-overview">
   <colgroup span="6"></colgroup>
   <tr>
