Vendors can create orders and add products to orders from the catalog page

--- a/app/views/spree/manage/orders/edit.html.erb
+++ b/app/views/spree/manage/orders/edit.html.erb
@@ -45,7 +45,10 @@
     				<td class="lead" colspan><%= order_form.object.display_total %></td>
     				<td></td>
   				</tr>
+
 				</table>
+
+				<a href="<%= manage_products_url %>" class="new-order-button">Add Products From Catalog</a>
 
         <div class="links col-md-6 navbar-form pull-right text-right" data-hook="cart_buttons">
           <div class="form-group">
