--- a/app/views/spree/cust/orders/index.html.erb
+++ b/app/views/spree/cust/orders/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Orders Overview</h1>
 
+<a href="<%= new_order_url %>" class="new-order-button">Create New Order</a>
+
 <% if @orders %>
 
   <table class="orders-overview">
