Fix css on logout

--- a/app/views/spree/manage/shared/_head.html.erb
+++ b/app/views/spree/manage/shared/_head.html.erb
@@ -15,7 +15,7 @@
     <%= Spree.t(controller.controller_name, :default => controller.controller_name.titleize) %>
   <% end %>
 </title>
-
+<%= stylesheet_link_tag 'application' %>
 <%= stylesheet_link_tag 'spree/manage/all' %>
 
 <%= javascript_include_tag 'spree/manage/all' %>
