--- a/app/views/spree/cust/shared/_head.html.erb
+++ b/app/views/spree/cust/shared/_head.html.erb
@@ -16,6 +16,7 @@
   <% end %>
 </title>
 
+<%= stylesheet_link_tag 'application' %>
 <%= stylesheet_link_tag 'spree/manage/all' %>
 
 <%= javascript_include_tag 'spree/manage/all' %>
