--- a/app/views/spree/cust/orders/edit.html.erb
+++ b/app/views/spree/cust/orders/edit.html.erb
@@ -5,7 +5,7 @@
 <h4>Order status: <%= @order.state %></h4>
 
 <div data-hook="outside_cart_form">
-	<%= form_for @order, url: spree.update_cart_path, html: { id: 'update-cart' } do |order_form| %>
+	<%= form_for @order, url: order_url, method: "patch", html: { id: 'update-cart' } do |order_form| %>
 	<%= order_form.label :delivery_date %>
 	<%= order_form.date_field :delivery_date, placeholder: "Delivery Date" %>
 		<div data-hook="inside_cart_form">
