--- a/app/views/spree/cust/orders/edit.html.erb
+++ b/app/views/spree/cust/orders/edit.html.erb
@@ -39,12 +39,15 @@
     				</tr>
     				<%= render "spree/orders/adjustments" %>
   				<% end %>
+
+
   				<tr class="warning cart-total">
     				<td colspan="4" align='right'><h5><%= Spree.t(:total) %></h5></td>
     				<td class="lead" colspan><%= order_form.object.display_total %></td>
     				<td></td>
   				</tr>
 				</table>
+				<a href="<%= vendor_url(@order.vendor) %>" class="new-order-button">Add New Product To Order</a>
 
         <div class="links col-md-6 navbar-form pull-right text-right" data-hook="cart_buttons">
           <div class="form-group">
