--- a/app/views/spree/cust/orders/_line_item.html.erb
+++ b/app/views/spree/cust/orders/_line_item.html.erb
@@ -32,7 +32,11 @@
       <%= line_item.single_money.to_html %>
     </td>
     <td class="cart-item-quantity" data-hook="cart_item_quantity" valign="center">
-      <%= item_form.number_field :quantity, min: 0, class: "form-control line_item_quantity", size: 5 %>
+      <% unless @path == "show" %>
+        <%= item_form.number_field :quantity, min: 0, class: "form-control line_item_quantity", size: 5 %>
+      <% else %>
+        <%= line_item.quantity %>
+      <% end %>
     </td>
     <td class="lead text-primary cart-item-total" data-hook="cart_item_total">
       <%= line_item.display_amount.to_html unless line_item.quantity.nil? %>
