--- a/app/views/spree/manage/orders/_line_item.html.erb
+++ b/app/views/spree/manage/orders/_line_item.html.erb
@@ -18,7 +18,7 @@
         </span>
       <% end %>
       <span class="line-item-description" data-hook="line_item_description">
-        <%= line_item_description_text(line_item.description) %>
+        <%#= line_item_description_text(line_item.description) %>
       </span>
     </td>
     <td class="lead text-primary cart-item-sku">
