color success message

--- a/app/assets/stylesheets/spree/manage/alert.css
+++ b/app/assets/stylesheets/spree/manage/alert.css
@@ -6,9 +6,9 @@
 }
 
 .alert-success{
-  background-color: #75ff7a;
-  color: #004702;
-  border: 1px solid #006b04;
+  background-color: #bd80ff;
+  color: #360070;
+  border: 1px solid #5600b3;
   border-radius: 10px;
 }
 
