Fix link for product on catalog in manage portal

--- a/app/views/spree/cust/shared/side_menu/_side_menu.html.erb
+++ b/app/views/spree/cust/shared/side_menu/_side_menu.html.erb
@@ -5,10 +5,11 @@
   <div class="nav-block" id="accordion">
     <%= render 'spree/cust/shared/side_menu/category/my_account' %>
     <%= render 'spree/cust/shared/side_menu/category/orders' %>
-    <%= render 'spree/cust/shared/side_menu/category/vendors' %>
+    <%= render 'spree/cust/shared/side_menu/category/catalog' %>
+    <%#= render 'spree/cust/shared/side_menu/category/vendors' %>
     <%#= render 'spree/customer/shared/side_menu/category/overview' %>
     <%#= render 'spree/customer/shared/side_menu/category/invoices' %>
     <%#= render 'spree/customer/shared/side_menu/category/inventory' %>
   </div>
-  
+
 </aside>
