--- a/app/views/spree/manage/products/index.html.erb
+++ b/app/views/spree/manage/products/index.html.erb
@@ -58,7 +58,7 @@
             <img>
           </div>
           <div class="cel">
-            <a href="<%= vendor_product_url(@vendor, product) %>"><%= product.name %></a>
+            <a href="<%= manage_product_url(product) %>"><%= product.name %></a>
           </div>
           <div class="cel">
             <%= product.sku %>
