--- a/app/views/spree/manage/orders/edit.html.erb
+++ b/app/views/spree/manage/orders/edit.html.erb
@@ -48,17 +48,19 @@
 
 				</table>
 
-				<a href="<%= manage_products_url %>" class="new-order-button">Add Products From Catalog</a>
+				<%= submit_tag "Add New Product To Order", class: "add-new-product-btn" %>
 
         <div class="links col-md-6 navbar-form pull-right text-right" data-hook="cart_buttons">
           <div class="form-group">
-            <%= order_form.submit class: 'btn btn-primary add-to-order', id: 'update-button' do %>
-             <%= Spree.t(:update) %>
-            <% end %>
-            <%= button_tag class: 'btn btn-lg btn-success add-to-order', id: 'checkout-link', name: 'checkout' do %>
+            <%#= order_form.submit class: 'btn btn-primary add-to-order', id: 'update-button' do %>
+             <%#= Spree.t(:update) %>
+            <%# end %>
+						<%= submit_tag Spree.t(:update), class: 'btn btn-primary add-to-order', id: 'update-button' %>
+						<%= submit_tag "Approve Order", class: 'btn btn-primary add-to-order', id: 'approve-button' %>
+            <%#= button_tag class: 'btn btn-lg btn-success add-to-order', id: 'checkout-link', name: 'checkout' do %>
               <%#= Spree.t(:checkout) %>
-              <%= "Approve Order"%>
-            <% end %>
+              <%#= "Approve Order"%>
+            <%# end %>
           </div>
         </div>
 
