--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -760,6 +760,13 @@ img{
     min-width: 160px;
 }
 
+.catalog-title {
+	float:left;
+}
+.new-order-button {
+	float:right;
+}
+
 /* Modal popup */
 #basic-modal-content {
 	display:none;
@@ -2206,9 +2213,4 @@ img{
   .order-product-list .tRow .cel:nth-child(4):after, .order-product-list .tRow .cel:nth-child(5):after, .order-product-list .tRow .cel:nth-child(6):after, .order-product-list .tRow .cel:nth-child(7):after {
 	    margin-top: 20px;
 	}
-}
-
-a.new-order-button {
-	width: 300px;
-	margin: 20px auto;
 }
