--- a/app/views/spree/manage/orders/edit.html.erb
+++ b/app/views/spree/manage/orders/edit.html.erb
@@ -4,7 +4,13 @@
 <h4><a href="<%= manage_orders_url %>">Back to All Orders</a></h4>
 <h1> Customer: <%= @order.customer.name if @order.customer %> </h1>
 <h3> Order #<%= @order.number %> </h3>
-<h4>Order status: <%= @order.state %></h4>
+<h4>Order status:
+	<% if @order.approved_at %>
+		Approved
+	<% else %>
+		Action Required
+	<% end %>
+</h4>
 
 <div data-hook="outside_cart_form">
 	<%= form_for ([:manage, @order]),url: manage_order_url, method: "patch", html: { id: 'update-cart' } do |order_form| %>
