Move new order button throughout manage portal

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -2207,6 +2207,15 @@ img{
 	.order-product-list .qty-block {
 	    padding: 9px 0;
 	}
+	.catalog-title{
+		float: none;
+		display: block;
+	}
+	.new-order-button {
+		float:none;
+		display: block;
+		margin: 20px auto;
+	}
 }
  @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   /* IE10+ specific styles go here */
