--- a/app/views/spree/cust/orders/index.html.erb
+++ b/app/views/spree/cust/orders/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Orders Overview</h1>
-
-<a href="<%= new_order_url %>" class="new-order-button">Create New Order</a>
+<h1 class="catalog-title"><%= @customer.name %> Orders Overview</h1>
+<a href="<%= new_order_url %>" class="new-order-button">Start New Order</a>
+<div class="clear"></div>
 
 <% if @orders %>
 
