--- a/app/assets/stylesheets/spree/manage/all.css
+++ b/app/assets/stylesheets/spree/manage/all.css
@@ -4,6 +4,7 @@
  * the top of the compiled file, but it's generally better to create a new file per style scope.
 
  *= require spree/manage/alert
+ *= require spree/manage/customer
  *= require spree/manage/confirmation
  *= require spree/manage/spree_manage
  *= require_tree .
