format customer edit labels

--- a/app/assets/stylesheets/spree/manage/customer.css
+++ b/app/assets/stylesheets/spree/manage/customer.css
@@ -95,6 +95,12 @@ ul.address {
   background: #FF9012;
 }
 
+.app_ui-wrapper .app_ui-block .customer-edit label{
+  text-align: left;
+  padding: 0;
+  margin: 0;
+}
+
 @media (max-width: 999px){
   .customer-account-info{
     float: left;
